<resources>
    <string name="app_name">We Jeep</string>
    <string name="contentDescriptionUseless">deco</string>
    <string name="contentDescriptionAction">action button</string>
    <string name="contentDescriptionContent">image with data</string>
    <string name="contentDescriptionUserContent">image from an other user</string>
    <string name="signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="we">We</string>
    <string name="jeep">Jeep</string>
    <string name="help">Help</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or Log in with</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="google">Google</string>
    <string name="signOut">Sign out</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="default_web_client_id">117155658476-svbc8353sj48t1dh53h50qh13cq9qb99.apps.googleusercontent.com</string>
    <string name="toggle_location">Toggle Location</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="activeMJeeps">Active Modern Jeeps</string>
    <string name="editProfile">Edit Profile</string>
    <string name="hello">Hello,</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="back">Back</string>
    <string name="manage_route">Manage Route</string>
    <string name="route_info">Route Info</string>
    <string name="add_route">Add Route</string>
    <string name="to">To</string>
    <string name="where">where</string>
    <string name="confirm">Confirm</string>
    <string name="edit_route">Edit Route</string>
    <string name="from">From</string>
    <string name="san_jose">San Jose</string>
    <string name="muzon_central">Muzon Central</string>
    <string name="unit_info">Unit Info</string>
    <string name="add_unit">Add Unit</string>
    <string name="manage_unit">Manage Unit</string>
    <string name="vehicle_model">Vehicle Model:</string>
    <string name="plate_no">Plate No.</string>
    <string name="date_added">Date Added</string>
    <string name="hd505">HD505</string>
    <string name="abc_123">ABC 123</string>
    <string name="edit_unit">Edit Unit</string>
    <string name="unit_no">Unit No. :</string>
    <string name="_01">01</string>
    <string name="schedule_info">Schedule Info</string>
    <string name="manage_schedule">Manage Schedule</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="from_day">From Day:</string>
    <string name="to_day">To Day:</string>
    <string name="from_time">From Time:</string>
    <string name="to_time">To Time:</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="select_date">Select Date</string>
    <string name="active_unit_info">Active Unit Info</string>
    <string name="manage_active_unit_list_s">Manage Active Unit List/s</string>
    <string name="assign_unit">Assign Unit</string>
    <string name="edit_assigned_unit">Edit Assigned Unit</string>
    <string name="drivername">Name: </string>
    <string name="drivercontactnumber">Contact Number: </string>
    <string name="driverdateadded">Date Added: </string>
    <string name="add_driver">Add Driver</string>
    <string name="manage_driver">Manage Driver</string>
    <string name="edit_button_description">edit button</string>
    <string name="delete_button_description">delete button</string>
    <string name="edit_driver">Edit Driver</string>
    <string name="plate_number">Plate Number:</string>
    <string name="driver">Driver:</string>
    <string name="select_day">Select Day</string>
    <string name="select_time">Select Time</string>
    <string name="enter_plate_number">Enter Plate Number</string>
    <string name="enter_vehicle_model">Enter Vehicle Model</string>
    <string name="enter_unit_number">Enter Unit Number</string>
    <string name="forget_password">Forget Password</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="edit_assigned">Edit Assigned</string>
    <string name="edit_assign_unit">Edit Assign Unit</string>
    <string name="add_pao">Add Pao</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="sign_up_for_pao">Sign up for PAO</string>
    <string name="sign_up_pao">Sign up PAO</string>
    <string name="name_pao">Name :</string>
    <string name="email_pao">Email :</string>
    <string name="back_pao">Back</string>
    <string name="date_added_pao">Date Added :</string>
    <string name="active_modern_jeep_s">Active Modern Jeep/s</string>
    <string name="pao">PAO:</string>

    <string name="add_vehicle">Add Vehicle</string>
    <string name="edit_assigned">Edit Assigned</string>
    <string name="edit_assign_unit">Edit Assign Unit</string>

    <string name="delete_account">Delete Account</string>


</resources>