<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/backgroundColor"
    app:contentPadding="5dp"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/drivername"
            android:id="@+id/tvDriverName"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/londrina_solid_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/drivercontactnumber"
            android:id="@+id/tvDriverContact"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/londrina_solid_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/driverdateadded"
            android:id="@+id/tvDateAdded"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/londrina_solid_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>