<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdminEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="167dp"
        android:background="@color/blueTextColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/etDriverName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/custom_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/londrina_solid_regular"
            android:text="@string/edit_driver"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etDriverContact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/drivercontactnumber"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDateAdded"
        app:layout_constraintEnd_toEndOf="@+id/etDateAdded"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etDateAdded"
        app:layout_constraintTop_toBottomOf="@+id/etDriverName" />

    <EditText
        android:id="@+id/etDateAdded"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="155dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/driverdateadded"
        android:inputType="date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnApplyChanges"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDriverContact" />

    <EditText
        android:id="@+id/etDriverName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/drivername"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDriverContact"
        app:layout_constraintEnd_toEndOf="@+id/etDriverContact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etDriverContact"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAdminEdit" />

    <Button
        android:id="@+id/btnApplyChanges"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="17dp"
        android:background="@drawable/round_btn_blue"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/apply_changes"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDateAdded" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="54dp"
        android:background="@drawable/round_btn_blue"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnApplyChanges" />

</androidx.constraintlayout.widget.ConstraintLayout>
