<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddUnitScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blueTextColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_unit"
        android:textColor="@color/white"
        android:fontFamily="@font/londrina_solid_regular"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_1"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_1" />

    <Button
        android:id="@+id/btnAddUnit"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/round_btn_blue"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.783"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/round_btn_blue"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_1"
        app:layout_constraintVertical_bias="0.946"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imgview_1"
        android:layout_width="370dp"
        android:layout_height="370dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_1"
        app:layout_constraintVertical_bias="0.278"
        app:srcCompat="@drawable/rectangle_white_bg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/unit_no"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/plate_no"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/vehicle_model"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.294"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/londrina_solid_regular"
        android:text="@string/date_added"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.798" />

    <EditText
        android:id="@+id/etUnitNumber"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/_01"
        android:textAlignment="center"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.127"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etVehicleModel"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hd505"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="MissingConstraints"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPlateNumber"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/abc_123"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.673"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etUnitDateAdded"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="Select Date"
        android:ems="10"
        android:clickable="false"
        android:focusable="false"
        android:importantForAutofill="no"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imgview_1"
        app:layout_constraintEnd_toEndOf="@+id/imgview_1"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="@+id/imgview_1"
        app:layout_constraintTop_toTopOf="@+id/imgview_1"
        app:layout_constraintVertical_bias="0.956" />

</androidx.constraintlayout.widget.ConstraintLayout>